# cosign_bazel_cloud_build

./: .goreleaser.yml  README.md  cosign.pem  kms_pub.pem  predicate.json
app/: .goreleaser.yml  BUILD.bazel  Dockerfile  WORKSPACE  cloudbuild.yaml  go.mod  go.sum  main.go  repositories.bzl
cert/: kms_pub.pem
client/: go.mod  go.sum  main.go
